Refactor to use getFirst() for improved readability in multiple classes